<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.asignatura.wappet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/veterinarias"
        android:name="com.asignatura.wappet.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/mascotaextraviada"
        android:name="com.asignatura.wappet.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/adoptar2"
        android:name="com.asignatura.wappet.adoptar"
        android:label="fragment_adoptar"
        tools:layout="@layout/fragment_adoptar" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.asignatura.wappet.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/registrar2"
        android:name="com.asignatura.wappet.registrar"
        android:label="fragment_registrar"
        tools:layout="@layout/fragment_registrar" />
</navigation>